[project]
name = "bnb-chain-chatbot-with-ui"
version = "0.1.0"
description = "A modern web interface for the BNB Chain Example Hub's Python chatbot"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "bnb-chain-agentkit>=0.1.1",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "openai>=0.27.0"
]