[project]
name = "chatbot"
version = "0.1.0"
description = "BNB Chain LangChain Agentkit Chatbot Example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bnb-chain-agentkit>=0.1.1",
    "langchain-core>=0.3.43",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "langgraph-checkpoint>=2.0.18",
    "python-dotenv>=1.0.1",
]
